k8s/stacks/lorawan/base/mosquitto-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: lorawan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: docker.io/eclipse-mosquitto:2.0
          ports:
            - containerPort: 1883
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: lorawan
spec:
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
